--- a/lib/android/build.gradle
+++ b/lib/android/build.gradle
@@ -14,8 +14,8 @@ buildscript {
 }
 
 android {
-    compileSdkVersion 27
-    buildToolsVersion "27.0.3"
+    compileSdkVersion = 29
+    buildToolsVersion = "29.0.2"
 
     lintOptions {
         abortOnError false
